# OpenGLGP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cpp_cmake.yml
cmake/: global_settings.cmake
src/: CMakeLists.txt  main.cpp
